# TaskManager

./: CMakeLists.txt  Dockerfile  README.md
proto/: ModelService.proto  Requests.proto  Responses.proto  Task.proto  TaskStructures.proto
src/: client.cpp  main.cpp  server.cpp
src/logging/: Initialisation.cpp  Initialisation.h  Log.h
src/model/: GRPCEndPoint.cpp  GRPCEndPoint.h  IdGenerator.cpp  IdGenerator.h  Model.cpp  Model.h  TaskManager.cpp  TaskManager.h  TaskSpace.cpp  TaskSpace.h
src/persistence/: TaskPersister.cpp  TaskPersister.h
src/ui/: Context.h  Factory.cpp  Factory.h  StateMachine.cpp  StateMachine.h
src/ui/command/: Command.cpp  Command.h  Error.h  Result.h
src/ui/controller/: Controller.h  DefaultController.h  GRPCEndPoint.cpp  GRPCEndPoint.h
src/ui/step/: Step.cpp  Step.h  SubStepOwners.cpp  SubStepOwners.h  SubSteps.cpp  SubSteps.h  Type.h
src/ui/view/: Printer.cpp  Printer.h  Reader.cpp  Reader.h  View.cpp  View.h
src/utilities/: ComparisonProtoObjects.cpp  ComparisonProtoObjects.h  Convert.cpp  Convert.h  CreateProtoObjects.cpp  CreateProtoObjects.h  SortingProtoObjects.cpp  SortingProtoObjects.h
tests/: IntegrationTest.cpp
tests/model/: GRPCEndPointServerTest.cpp  IdGeneratorTest.cpp  ModelMock.h  ModelTest.cpp  MultiThreadingTest.cpp  TaskManagerMock.h  TaskManagerTest.cpp  TaskSpaceTest.cpp
tests/persistence/: TaskPersisterTest.cpp
tests/ui/: ContextMock.h  ContextTest.cpp  FactoryMock.h  FactoryTest.cpp  StateMachineTest.cpp
tests/ui/command/: CommandTest.cpp
tests/ui/controller/: DefaultControllerMock.h  DefaultControllerTest.cpp  GRPCEndPointClientTest.cpp
tests/ui/step/: StepMock.h  StepTest.cpp  SubStepTest.cpp
tests/ui/view/: ViewMock.h  ViewTest.cpp
tests/utilities/: ComparisonProtoObjectsTest.cpp  ConvertTest.cpp  CreateProtoObjectsTest.cpp  SortingProtoObjectsTest.cpp
